Add seeders and hotfix namespaces
