# AdminService/routes/api.php
@@ -1,8 +1,9 @@
 <?php
 
-use App\Http\Controllers\Admin\CategoryController;
-use App\Http\Controllers\Admin\ProductController;
-use App\Http\Controllers\Admin\PromotionController;
+use App\Http\Controllers\CategoryController;
+use App\Http\Controllers\OrderController;
+use App\Http\Controllers\ProductController;
+use App\Http\Controllers\PromotionController;
 use App\Http\Controllers\AuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -24,29 +25,48 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 Route::post('/auth/login', [AuthController::class, 'login']);
 Route::post('/auth/logout', [AuthController::class, 'logout'])->middleware('auth:sanctum');
-Route::post('/auth/register/manager', [AuthController::class, 'registerManager']);
-Route::post('/auth/register/moderator', [AuthController::class, 'registerModerator']);
-Route::post('/auth/register/seller', [AuthController::class, 'registerSeller']);
 Route::post('/auth/change-password', [AuthController::class, 'changePassword'])->middleware('auth:sanctum');
 
-Route::middleware(['auth:sanctum', 'ability:employee'])->group(function () {
-    Route::post('/categories', [CategoryController::class, 'store']);
-    Route::put('/categories/{id}', [CategoryController::class, 'update']);
-    Route::delete('/categories/{id}', [CategoryController::class, 'destroy']);
+Route::middleware(['auth:sanctum'])->group(function () {
+    Route::post('/promotions', [PromotionController::class, 'store']);
+    Route::put('/promotions/{id}', [PromotionController::class, 'update']);
+    Route::delete('/promotions/{id}', [PromotionController::class, 'destroy']);
+
+    Route::get('/products', [ProductController::class, 'index']);
+    Route::get('/products/{id}', [ProductController::class, 'show']);
+    Route::get('/products/search/details', [ProductController::class, 'getSearchDetails']);
+    Route::post('/products/get', [ProductController::class, 'getProduct']);
+
+    //Route::get('/categories', [CategoryController::class, 'index']);
+    Route::get('/categories/{id}', [CategoryController::class, 'show']);
+});
+
+Route::middleware(['auth:sanctum', 'ability:manager'])->group(function () {
+    Route::post('/auth/register/manager', [AuthController::class, 'registerManager']);
+    Route::post('/auth/register/moderator', [AuthController::class, 'registerModerator']);
+    Route::post('/auth/register/seller', [AuthController::class, 'registerSeller']);
+});
+
+Route::middleware(['auth:sanctum', 'ability:manager,moderator'])->group(function () {
 
     Route::post('/products', [ProductController::class, 'store']);
     Route::post('/products/{id}', [ProductController::class, 'update']);
     Route::delete('/products/{id}', [ProductController::class, 'destroy']);
-    Route::post('/products/get', [ProductController::class, 'getProduct']);
 
-    Route::post('/promotions', [PromotionController::class, 'store']);
-    Route::put('/promotions/{id}', [PromotionController::class, 'update']);
-    Route::delete('/promotions/{id}', [PromotionController::class, 'destroy']);
+
+    Route::post('/categories', [CategoryController::class, 'store']);
+    Route::put('/categories/{id}', [CategoryController::class, 'update']);
+    Route::delete('/categories/{id}', [CategoryController::class, 'destroy']);
 });
 
-Route::get('/categories', [CategoryController::class, 'index']);
-Route::get('/categories/{id}', [CategoryController::class, 'show']);
+Route::middleware(['auth:sanctum', 'ability:manager,seller'])->group(function () {
+    Route::get('/orders/active', [OrderController::class, 'getActiveOrders']);
+    Route::patch('/orders/{orderId}/status', [OrderController::class, 'changeOrderStatus']);
+});
 
-Route::get('/products', [ProductController::class, 'index']);
-Route::get('/products/{id}', [ProductController::class, 'show']);
-Route::get('/products/search/details', [ProductController::class, 'getSearchDetails']);
+
+
+
+
+
+Route::get('/categories', [CategoryController::class, 'index']);
